# Alx_DjangoLearnLab

Introduction_to_Django/LibraryProject/: README.md
advanced-api-project/: .gitignore  db.sqlite3  pyproject.toml
advanced-api-project/advanced_api_project/: settings.py  urls.py
advanced-api-project/api/: models.py  serializers.py  test_views.py  urls.py  views.py
advanced_features_and_security/: .gitignore  pyproject.toml
advanced_features_and_security/LibraryProject/LibraryProject/: settings.py  urls.py
advanced_features_and_security/LibraryProject/bookshelf/: CRUD_operations.md  admin.py  models.py  update.md  urls.py  views.py
advanced_features_and_security/LibraryProject/bookshelf/migrations/: 0001_initial.py  0002_alter_book_options.py
advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/: delete_book.html  form_example.html
advanced_features_and_security/LibraryProject/relationship_app/: models.py  query_samples.py  urls.py
advanced_features_and_security/LibraryProject/relationship_app/migrations/: 0002_userprofile.py  0003_alter_author_name_alter_book_author_alter_book_title_and_more.py
api_project/: README.md  db.sqlite3  pyproject.toml
api_project/api/: serializers.py  urls.py  views.py
api_project/api_project/: settings.py
django-models/: pyproject.toml
django_blog/: pyproject.toml
django_blog/blog/: models.py
social_media_api/: README.md  pyproject.toml
social_media_api/accounts/: models.py  serializers.py  views.py
social_media_api/notifications/: models.py  views.py
social_media_api/posts/: urls.py  (+3 more)
(+26 files in other folders)
