[project]
name = "introduction-to-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "django-csp>=4.0",
    "django-extensions>=4.1",
    "mysqlclient>=2.2.7",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
]
